# infera

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  INFERA_PROJECT_KNOWLEDGE.md  Makefile  PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  docker-compose.prod.yml  docker-compose.smoke.yml  docker-compose.yml
deploy/: AGENTS.md
docs/: A100_SXM4_BENCHMARK_DECISION_SUMMARY.md  BENCHMARK_BASELINE_CURRENT.md  BENCHMARK_BASELINE_TEMPLATE.md  COLD_START_BENCHMARK_WORKFLOW.md  COST_ATTRIBUTION.md  ENGINE_BENCHMARK_EXECUTION_PLAN.md  ENGINE_BENCHMARK_MATRIX_TEMPLATE.md  HERMES_AGENTS.md  INFERENCE_PERFORMANCE_LAB.md  MODULAR_INFERENCE_BACKEND.md  OPTIMIZATION_PLAN.md  PLATFORM_ROADMAP.md  PRODUCT_PIPELINES.md  QUANTIZATION_BENCHMARK_MATRIX.md  SOFTWARE_PERF_RUNPOD_ROADMAP.md  infera-optimization-plan.md
frontend/: AGENTS.md  CHANGELOG.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  (+3 more)
go/: go.mod  (+2 more)
python/: AGENTS.md  Dockerfile  Dockerfile.light  README.md  pyproject.toml
python/src/infera_bench/: __init__.py  adapters.py  catalog.py  evals.py  execution.py  lab.py  matrix.py  orchestration.py  results.py  schema.py
python/src/infera_worker/: __init__.py  cli.py  config.py  engine.py  http_server.py  types.py  worker.py
python/src/infera_worker/engines/: __init__.py  base.py  mock_engine.py  sglang_engine.py  tensorrt_llm_engine.py  vllm_engine.py
python/tests/: conftest.py  test_benchmark_chat.py  test_benchmark_lab_adapters.py  test_benchmark_lab_catalog.py  test_benchmark_lab_evals.py  test_benchmark_lab_execution.py  test_benchmark_lab_matrix.py  test_benchmark_lab_module.py  test_benchmark_lab_results.py  test_capture_startup_health.py  test_cold_start_benchmark.py  test_engine.py  test_gateway_auth.py  test_gateway_heartbeat_recovery.py  test_http_server_metrics.py  test_run_engine_benchmark_phase1.py  test_run_engine_benchmark_phase2.py  test_summarize_engine_phase1_baseline.py  test_types.py  test_vllm_runtime_config.py  test_worker.py  test_worker_http_contract.py  test_worker_security.py
python/tests/hermes_api/: .latest-report.json  AGENTS.md  README.md  TEST_PLAN.md  __init__.py  assertions.py  client.py  config.py  conftest.py  fixture_loader.py  mock_api.py  models.py  reporting.py  scenario_runner.py  test_conditions.py  test_live_smoke.py  test_prompt_matrix.py  test_regressions.py  test_tool_matrix.py  tool_catalog.py
python/tests/hermes_api/data/: condition_cases.json  prompt_cases.json  regression_cases.json  tool_cases.json
(+584 files in other folders)
