[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infera-worker"
version = "0.1.0"
description = "Infera Worker - LLM Inference Engine"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
    "protobuf>=4.25.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
vllm = ["vllm>=0.3.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.3.0"]

[project.scripts]
infera-worker = "infera_worker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/infera_worker", "src/infera_proto"]